# SamplinSafari

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  Samplin Safari.data  Samplin Safari.js  Samplin Safari.wasm  index.html  shell.emscripten.html  shell.emscripten.html.in
.github/workflows/: ci-emscripten.yml  ci-emscripten2.yml  ci-linux.yml  ci-mac.yml  ci-windows.yml  release.yml
assets/app_settings/emscripten/: shell.emscripten.html
assets/shaders/: grid.frag  grid.vert  lines.frag  lines.vert  point.frag  point_instance.frag  point_instance.vert  points.frag  points.vert
cmake/: VersionFromGit.cmake
gui/: SampleViewer.cpp  SampleViewer.h  Well.cpp  Well.h  app.cpp  app.h  arcball.h  export.cpp  export.h  gui_app.cpp  gui_app.h  main.cpp  shader.cpp  shader.h  timer.h  traits.h  utils.h
include/: app.h  arcball.h  common.h  export_to_file.h  imgui_ext.h  opengl_check.h  renderpass.h  shader.h
include/sampler/: BlueNets.h  CSVFile.h  CascadedSobol.h  Faure.h  GrayCode.h  Halton.h  Hammersley.h  Jittered.h  LP.h  Misc.h  MultiJittered.h  NRooks.h  OA.h  OAAddelmanKempthorne.h  OABose.h  OABoseBush.h  OABush.h  OACMJND.h  OACommon.h  Random.h  RandomPermutation.h  SOA.h  Sampler.h  Sobol.h  Sudoku.h  XiSequence.h  fwd.h  halton_sampler.h  onetwo_matrices.h  xi.h
macos/: Info.plist
resources/: icon.icns  icon.psd
src/: Halton.cpp  Jittered.cpp  LP.cpp  Misc.cpp  MultiJittered.cpp  NRooks.cpp  OA.cpp  OAAddelmanKempthorne.cpp  OABose.cpp  OABoseBush.cpp  OABush.cpp  OACMJND.cpp  OACommon.cpp  Random.cpp  SOA.cpp  Sobol.cpp  app.cpp  common.cpp.in  export_to_file.cpp  opengl_check.cpp  renderpass_gl.cpp  renderpass_metal.mm  shader.cpp  shader_gl.cpp  shader_metal.mm
src/sampler/: BlueNets.cpp  CSVFile.cpp  CascadedSobol.cpp  Faure.cpp  GrayCode.cpp  Halton.cpp  Jittered.cpp  LP.cpp  MultiJittered.cpp  NRooks.cpp  OA.cpp  OAAddelmanKempthorne.cpp  OABose.cpp  OABoseBush.cpp  OABush.cpp  OACMJND.cpp  Random.cpp  Sobol.cpp  SobolMatrices.cpp  Sudoku.cpp  XiSequence.cpp  onetwo_matrices.cpp
